# normet-r

./: .Rbuildignore  .gitignore  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  ci_check.sbatch
R/: data.r  nm_analysis_events.r  nm_backend_h2o.r  nm_backend_lightgbm.r  nm_causal_bands.r  nm_causal_bayesian.r  nm_causal_diagnostics.r  nm_causal_inference.r  nm_causal_panel.r  nm_causal_placebo.r  nm_causal_scm.r  nm_causal_variants.r  nm_exceptions.r  nm_io_defra.r  nm_io_eea.r  nm_io_era5.r  nm_io_gdas.r  nm_io_openaq.r  nm_io_openmeteo.r  nm_io_trajectory.r  nm_model_io.r  nm_model_pdp.r  nm_model_predict.r  nm_model_train.r  nm_norm_decom.r  nm_norm_normalise.r  nm_norm_normalise_ext.r  nm_norm_rolling.r  nm_pipeline_do_all.r  nm_pipeline_multisite.r  nm_pipeline_workflow.r  nm_placebo_in_time.r  nm_plotting.r  nm_report.r  nm_utils_cache.r  nm_utils_cv.r  nm_utils_featureeng.r  nm_utils_features.r  nm_utils_logging.r  nm_utils_metrics.r  (+7 more)
data-raw/: generate.R  prepare_case_data.R
gui/: pyproject.toml
gui/normet_r_gui/: __init__.py  __main__.py  _basic_plots.py  _decomp_plots.py  _examples.py  _multiscale.py  _multiscale_plots.py  _scm_plots.py  _settings.py  _widgets.py  app.py  bridge.R  data_window.py  dataframe_model.py  main_window.py  rbridge.py  scm_window.py  trajectory_window.py  workers.py
gui/packaging/: README.md  launcher.py  normet_r_gui.spec
gui/packaging/assets/: make_icon.py  normet.icns
gui/packaging/linux/: build_appimage.sh
gui/packaging/macos/: build_dmg.sh
gui/packaging/windows/: installer.iss
(+167 files in other folders)
